services/forum/k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - staging-forums.wetfish.net
  rules:
  - host: staging-forums.wetfish.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forum-web
            port:
              number: 80
